--- a/public/partials/informes.html
+++ b/public/partials/informes.html
@@ -341,22 +341,22 @@
 }
 
 .bar7 {
-	background-image: -webkit-gradient(linear, left top, right top, from(#8dca2f), to(white), color-stop(0.70, #8dca2f), color-stop(0.70, white));
-	background-image: -moz-linear-gradient(0, #8dca2f 0%, #8dca2f 70%, white 70%, white 100%);
+	background-image: -webkit-gradient(linear, left top, right top, from(#c6e497), to(white), color-stop(0.70, #c6e497), color-stop(0.70, white));
+	background-image: -moz-linear-gradient(0, #c6e497 0%, #c6e497 70%, white 70%, white 100%);
 }
 
 .bar8 {
-	background-image: -webkit-gradient(linear, left top, right top, from(#8dca2f), to(white), color-stop(0.80, #8dca2f), color-stop(0.80, white));
-	background-image: -moz-linear-gradient(0, #8dca2f 0%, #8dca2f 80%, white 80%, white 100%);
+	background-image: -webkit-gradient(linear, left top, right top, from(#c6e497), to(white), color-stop(0.80, #c6e497), color-stop(0.80, white));
+	background-image: -moz-linear-gradient(0, #c6e497 0%, #c6e497 80%, white 80%, white 100%);
 }
 
 .bar9 {
-	background-image: -webkit-gradient(linear, left top, right top, from(#c6e497), to(white), color-stop(0.90, #c6e497), color-stop(0.90, #c6e497));
-	background-image: -moz-linear-gradient(0, #c6e497 0%, #c6e497 90%, white 90%, white 100%);
+	background-image: -webkit-gradient(linear, left top, right top, from(#8dca2f), to(white), color-stop(0.90, #8dca2f), color-stop(0.90, #8dca2f));
+	background-image: -moz-linear-gradient(0, #8dca2f 0%, #8dca2f 90%, white 90%, white 100%);
 }
 
 .bar10 {
-	background-color: #c6e497;
+	background-color: #8dca2f;
 }
 
 td.porcentaje > span::after {
