--- a/public/partials/permisoscrud.html
+++ b/public/partials/permisoscrud.html
@@ -2,19 +2,15 @@
 <div class="row">
 	<div id="superuser" ng-show="$root.permisoscalculados.grantoption || $root.permisoscalculados.superuser">
 		<div ng-class="{'col-lg-5': !oculto, 'hidden': oculto}" class="left animated">
-			<div class="panel panel-danger" ng-if="$root.permisoscalculados.superuser">
-				<div class="panel-heading">
-					<div class="input-group">
-					  <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-						<input  class="form-control" ng-model="usuariosbuscado" typeahead-on-select="on_usuariobuscado_selected($item,$model,$label)" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-length="3" uib-typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)" typeahead-wait-ms="200" />
-					</div>
-				</div>
+			<div class="input-group">
+			  <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+				<input class="form-control" ng-model="usuariosbuscado" typeahead-on-select="on_usuariobuscado_selected($item,$model,$label)" placeholder="Buscar por plaza, login carm o nombre"  type="text" typeahead-min-length="3" uib-typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)" typeahead-wait-ms="200" />
 			</div>
-			<br/>
+			<br />
 			<organismos otitle="'Organismos'" arbol="arbol" tipoelementos="'subelementos (procedimientos y cartas de servicio)'" attr="'sumatorio'" setseleccionado="setSeleccionado" seleccionado="seleccionado" filtro="filtro" showprocedimientos="true" showcartas="true" setprocseleccionado="setProcSeleccionado" procseleccionado="procedimiento_seleccionado" setcartaseleccionada="setCartaSeleccionada" cartaseleccionada="carta_seleccionada"></organismos>
 		</div>
-	        <!-- PERMISOS DE UN USUARIO -->
-		<div ng-show="show_details_permiso && $root.permisoscalculados.superuser" ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" >
+    <!-- PERMISOS DE UN USUARIO -->
+		<div ng-show="show_details_permiso && $root.permisoscalculados.superuser" ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}">
 			<h2 class="center">Permisos de
 				<span class="hidden-sm hidden-xs">{{usuariodetalle.nombre}} {{usuariodetalle.apellidos}}</span>
 				<span class="hidden-lg hidden-md">{{usuariodetalle.login}}/{{usuariodetalle.codplaza}}</span>
@@ -35,21 +31,24 @@
 							<span class="hidden-lg hidden-md hidden-sm visible-xs">R.</span>
 						</th>
 						<th>
-							<span class="visible-lg visible-md hidden-sm hidden-xs" title="¿Permite introducir datos?"> Lectura datos </span>
+							<span class="visible-lg visible-md hidden-sm hidden-xs" title="¿Permite introducir datos?"> Lectura datos</span>
 							<span class="hidden-lg hidden-md visible-sm hidden-xs" title="¿Permite introducir datos?"> Lect. datos</span>
 							<span class="hidden-lg hidden-md hidden-sm visible-xs" title="¿Permite introducir datos?"> Lect.</span>
-						</th><th>
-							<span class="visible-lg visible-md hidden-sm hidden-xs" title="¿Permite introducir datos?"> Escribir datos </span>
-							<span class="hidden-lg hidden-md visible-sm hidden-xs" title="¿Permite introducir datos?"> Escr. datos </span>
+						</th>
+						<th>
+							<span class="visible-lg visible-md hidden-sm hidden-xs" title="¿Permite introducir datos?"> Escribir datos</span>
+							<span class="hidden-lg hidden-md visible-sm hidden-xs" title="¿Permite introducir datos?"> Escr. datos</span>
 							<span class="hidden-lg hidden-md hidden-sm visible-xs" title="¿Permite introducir datos?"> Escr.</span>
-						</th><th>
-							<span class="visible-lg visible-md hidden-sm hidden-xs" title="¿Permite otorgar permisos?"> Dar permisos </span>
-							<span class="hidden-lg hidden-md visible-sm hidden-xs" title="¿Permite otorgar permisos?"> Permisos </span>
+						</th>
+						<th>
+							<span class="visible-lg visible-md hidden-sm hidden-xs" title="¿Permite otorgar permisos?"> Dar permisos</span>
+							<span class="hidden-lg hidden-md visible-sm hidden-xs" title="¿Permite otorgar permisos?"> Permisos</span>
 							<span class="hidden-lg hidden-md hidden-sm visible-xs" title="¿Permite otorgar permisos?"> Perm.</span>
 						</th>
 						<th></th>
 					</tr>
 				</thead>
+				<tfoot></tfoot>
 				<tbody ng-if="permisos.length || procedimientos.length || cartas.length " id="LISTADO_PERMISOS_DE_UN_USUARIO">
 					<tr ng-repeat="permiso in permisos" ng-if="permisos.length" ng-init="objetopermiso=getObjetoPermisoUsuario(permiso)" >
 						<td>{{permiso.login}}</td>
@@ -136,14 +135,13 @@
 						</td>
 					</tr>
 				</tbody>
-				<tfoot></tfoot>
 			</table>
 		</div>
-	        <!-- PERMISOS APLICADOS SOBRE EL NODO SELECCIONADO -->
-		<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" class="right animated" ng-if="!show_details_permiso">
+		
+		<div ng-class="{'col-lg-7': !oculto, 'col-lg-12': oculto}" ng-if="!show_details_permiso">
 			<h2 class="center">Permisos</h2>
 			<table class="table table-striped table-bordered table-condensed table-hover">
-				<!--<caption>Permisos</caption>-->
+				<caption>Permisos</caption>
 				<thead>
 					<tr>
 						<th colspan="{{ !is_show_recursive_users && !procedimientos.length ? 8 : 9 }}">
@@ -164,84 +162,90 @@
 						</th>
 					</tr>
 					<tr ng-if="show_form_add_permiso">
-
 						<td colspan="{{ !is_show_recursive_users && !procedimientos.length? 8 : 9 }}" class="form-container">
-							<form name="nuevousuario-form" id="nuevousuario-form" ng-init="usuarioseleccionado=''">
-									<input class="form-control" ng-model="usuarioseleccionado" placeholder="Buscar por plaza, login carm o nombre" type="text" uib-typeahead-min-length="3" uib-typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)" typeahead-wait-ms="200" />
-								<!--<br/>
-								<button type="button" class="btn btn-default" ng-click="crearnuevousuario()" ng-if="!is_nuevousuario">
-								  <span class="glyphicon glyphicon-search"></span> Nuevo usuario
-								</button>
-								<fieldset ng-if="is_nuevousuario"><legend>Nuevo usuario</legend>
-									<br/>
-									<span><strong>Introducir nueva persona.</strong></span><br/>
-									<br/>
-									<label name="nombre"  style="width:100%">
-										<span>Nombre: </span><input  class="form-control" type="text" ng-model="nuevousuario.nombre" name="nombre" />
-									</label>
-									<br/>
-									<label name="apellidos" style="width:100%">
-										<span>Apellidos: </span><input  class="form-control" type="text" ng-model="nuevousuario.apellidos" name="apellidos" />
-									</label>
-									<br/>
-									<label name="genero" style="width:100%">
-										<span>G&eacute;nero: </span>
+							<form name="nuevousuario-form" id="nuevousuario-form" ng-init="usuarioseleccionado=''" class="form-horizontal" style="padding:30px">
+								<input class="form-control" ng-model="usuarioseleccionado" placeholder="Buscar por plaza, login carm o nombre" type="text" uib-typeahead-min-length="3" uib-typeahead="showPersona(eresp) for eresp in getPersonas($viewValue)" typeahead-wait-ms="200" />
+								<br/>
+								<div class="pull-right" ng-if="$root.permisoscalculados.superuser">
+									<button type="button" class="btn btn-default" ng-click="crearnuevousuario()" ng-disabled="usuarioseleccionado">
+									  <span class="glyphicon glyphicon-search"></span> Nuevo usuario no Gesper
+									</button>
+								</div>
+								<br style="clear:both" />
+
+								<fieldset ng-if="is_nuevousuario">
+									<legend>Nuevo usuario</legend>
+
+									<p><strong>Introducir nueva persona.</strong></p>
+									<div class="form-group">
+										<label name="nombre">Nombre</label>
+										<input class="form-control" type="text" ng-model="nuevousuario.nombre" name="nombre" />
+									</div>
+									<div class="form-group">
+										<label name="apellidos">Apellidos</label>
+										<input  class="form-control" type="text" ng-model="nuevousuario.apellidos" name="apellidos" />
+									</div>
+									<div class="form-group">
+										<label name="genero">G&eacute;nero</label>
 										<select ng-model="nuevousuario.genero" name="genero" class="form-control" >
-											<option value="Hombre">Hombre</option>
-											<option value="Mujer">Mujer</option>
+											<option value="M">Hombre</option>
+											<option value="F">Mujer</option>
 										</select>
-									</label>
-									<br/>
-									<label name="telefono" style="width:100%">
-										<span>Telefono: </span><input type="text" ng-model="buscado_telefono" name="nuevousuario.telefono" class="form-control"  />
-									</label>
-									<br/>
-									<label name="login" style="width:100%">
-										<span>Login: </span><input type="text" ng-model="nuevousuario.login" name="login" class="form-control"  />
-									</label>
-									<br/>
-									<label name="plaza" style="width:100%">
-										<span>Plaza: </span><input type="text" ng-model="nuevousuario.codplaza" name="plaza" class="form-control"  />
-									</label>
-									<br/>
+									</div>
+									<div class="form-group">
+										<label name="telefono">Telefono</label>
+										<input type="text" ng-model="buscado_telefono" name="nuevousuario.telefono" class="form-control" />
+									</div>
+									<div class="form-group">
+										<label name="login">Login:</label>
+										<input type="text" ng-model="nuevousuario.login" name="login" class="form-control" />
+									</div>
+									<div class="form-group">
+										<label name="plaza">Plaza:</label>
+										<input type="text" ng-model="nuevousuario.codplaza" name="plaza" class="form-control" />
+									</div>
+									<div class="form-group">
+										<label name="contrasenya">Password</label>
+										<input type="text" ng-model="nuevousuario.contrasenya" name="contrasenya" class="form-control"  />
+									</div>
 									<button type="button" class="btn btn-default" ng-click="_crearnuevousuario()">
 										<span class="glyphicon glyphicon-search"></span> Crear
 									</button>
 									<button type="button" class="btn btn-default" ng-click="cancelarnuevousuario()">
 										<span class="glyphicon glyphicon-remove"></span> Cancelar
 									</button>
-								</fieldset>-->
+								</fieldset>
 								<input type="hidden" name="procedimiento" value="{{procedimiento_seleccionado.codigo || 0}}" />
 								<input type="hidden" name="nodojerarquia" value="{{seleccionado.id || 0}}" />
 								<input type="hidden" name="tiposeleccion" value="{{seleccionado_organica?'jerarquia':'procedimiento'}}" />
 								<br />
-	                            <p>Si no encuentra la persona, debe realizar la búsqueda exacta por login carm o plaza.</p>
-								<label for="permisoallogin" >
+								<p>Si no encuentra la persona, debe realizar la búsqueda exacta por login carm o plaza.</p>
+								<label>
 									<input type="checkbox" ng-model="permisoallogin" name="permisoallogin" ng-disabled="!usuarioseleccionado"/> Asignar permiso al login y no a la plaza
 								</label>
 
 								<div ng-if="$root.permisoscalculados.superuser">
-									<label for="propietario" ng-if="!seleccionado_organica && procedimiento_seleccionado">
-										<input type="checkbox" ng-model="propietario" name="propietario" ng-disabled="  !usuarioseleccionado " value="1"/> Es propietario del procedimiento
+									<label ng-if="!seleccionado_organica && procedimiento_seleccionado">
+										<input type="checkbox" ng-model="propietario" name="propietario" ng-disabled="!usuarioseleccionado" value="1"/> Es propietario del procedimiento
 									</label>
 									<br/>
-									<label for="grantoption">
-										<input type="checkbox" ng-model="cb_grantoption" name="grantoption" ng-disabled=" !usuarioseleccionado || propietario" value="1"/> Puede conceder permisos
+									<label>
+										<input type="checkbox" ng-model="cb_grantoption" name="grantoption" ng-disabled="!usuarioseleccionado || propietario" value="1"/> Puede conceder permisos
 									</label>
 									<br/>
-									<label for="w_option">
-										<input type="checkbox" ng-model="w_option" name="w_option" ng-disabled="  !usuarioseleccionado || propietario" value="1" /> Puede introducir datos
+									<label>
+										<input type="checkbox" ng-model="w_option" name="w_option" ng-disabled="!usuarioseleccionado || propietario" value="1" /> Puede introducir datos
 									</label>
 									<br/>
-									<label for="psuperuser">
-										<input type="checkbox" ng-model="psuperuser" name="psuperuser" ng-disabled=" !usuarioseleccionado  || propietario" value="1" /> Superusuario
+									<label>
+										<input type="checkbox" ng-model="psuperuser" name="psuperuser" ng-disabled="!usuarioseleccionado || propietario" value="1" /> Superusuario
 									</label>
 									<br class="clear"/>
 									<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="crearpermiso(usuarioseleccionado,w_option,cb_grantoption,psuperuser,permisoallogin)" ><span class="glyphicon glyphicon-ok"></span> <span>Crear</span></button>
 									 &nbsp;<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="delegar(usuarioseleccionado)" title="concede tus permisos, salvo la capacidad de dar permiso a otros" ><span class="glyphicon glyphicon-share"></span> <span>Delegar permisos</span></button>
 								</div>
 								<div ng-if="!$root.permisoscalculados.superuser">
-									&nbsp;<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="delegar(usuarioseleccionado)" title="concede tus permisos, salvo la capacidad de dar permiso a otros" >
+									<button class="btn btn-default danger" ng-disabled="is_nuevousuario || !usuarioseleccionado" ng-click="delegar(usuarioseleccionado)" title="concede tus permisos, salvo la capacidad de dar permiso a otros" >
 										<span class="glyphicon glyphicon-share"></span> <span>Delegar permisos</span>
 									</button>
 								</div>
