--- a/public/partials/detallesorganica.html
+++ b/public/partials/detallesorganica.html
@@ -94,7 +94,7 @@
 					<div class="panel panel-danger">
 						<div class="panel-heading">{{graph.caption}}</div>
 						<div class="panel-body">
-							<canvas class="chart chart-bar" chart-data="graph.data" chart-labels="graph.labels" chart-series="graph.series" style="height:40px"></canvas>
+							<canvas class="chart chart-bar" chart-data="graph.data" chart-labels="graph.labels" chart-series="graph.series" chart-options="graph.options" style="height:60px"></canvas>
 							<br style="clear:both"/>
 						</div>
 					</div>
